force-app/main/default/objects/Messaging_Session__c/Messaging_Session__c.object-meta.xml
<CustomObject>
    <label>Messaging Session</label>
    <nameField>
        <displayFormat>MS - {0000}</displayFormat>
        <label>Session</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messaging Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>