force-app/main/default/objects/Messaging_Session__c/fields/Agent_Session__c.field-meta.xml
<CustomField>
    <fullName>Agent_Session__c</fullName>
    <label>Agent Session</label>
    <length>255</length>
    <type>Text</type>
</CustomField>