force-app/main/default/objects/Messaging_Session__c/fields/No_of_Inbound_Messages__c.field-meta.xml
<CustomField>
    <fullName>No_of_Inbound_Messages__c</fullName>
    <label>No of Inbound Messages</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>