force-app/main/default/objects/Messaging_Session__c/fields/Session_status__c.field-meta.xml
<CustomField>
    <fullName>Session_status__c</fullName>
    <label>Session status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Message Received</fullName>
            </value>
            <value>
                <fullName>Automation Sent</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>