force-app/main/default/objects/Messaging_Session__c/fields/To_Number__c.field-meta.xml
<CustomField>
    <fullName>To_Number__c</fullName>
    <label>To Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>