force-app/main/default/objects/Messaging_Session__c/fields/Total_Duration__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration__c</fullName>
    <formula>IF(
    ISPICKVAL(Session_status__c, &quot;Completed&quot;),
    MAX(0, (End_Time__c - Start_Time__c) * 24),
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>